# Takone

./: .env.example  .gitignore  CLA.md  COMMERCIAL.md  README.md  config.yaml  install.sh  pyproject.toml  takone-cli
agents/: cli.py  config.py  director.py  log.py  researcher.py  tools.py  transcript.py  tui.py
core/browser/: __init__.py  downloader.py  playwright.py
core/image/: __init__.py  base.py  factory.py  jimeng.py
core/video/: __init__.py  base.py  factory.py  minimax.py  seedance.py  sora.py
core/vision/: __init__.py  base.py  claude.py  doubao.py  factory.py  gpt4o.py  kimi.py  qwen.py  zhipu.py
skills/designer/: SKILL.md
skills/learn/: SKILL.md
skills/memory/: SKILL.md
skills/pipeline/: SKILL.md
skills/reviewer/: SKILL.md  template.md
skills/scriptwriter/: SKILL.md  reference.md  template.md
skills/storyboard/: SKILL.md  reference.md  template.md
skills/visualizer/: SKILL.md  reference.md  template.md
utils/: audio.py  ffmpeg.py
